--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-  "consumerKey": "",
-  "consumerSecret": "",
-  "accessToken": "",
-  "accessTokenSecret": "",
+  "consumerKey": "hPoBT3WLtsDo0qLaxS0GQIARw",
+  "consumerSecret": "KNyKnZMIc2rSdXry5isg9sMVTHrLQj0CLLrA4vRnpkemPEfXD9",
+  "accessToken": "173699844-xj7KEFXSdo0Mmo1o9VECQsqesadPaH0QPw9A9CUp",
+  "accessTokenSecret": "MqJJ0GmabP7p7UCJhSXQCNbu8aOAjqW7rEQnCycUoahN6",
   "port": "7890"
 }
